<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Space
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textSize="@dimen/number_text_size" />

        <Button
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:textSize="@dimen/number_text_size" />

        <Button
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:textSize="@dimen/number_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:textSize="@dimen/number_text_size" />

        <Button
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:textSize="@dimen/number_text_size" />

        <Button
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            android:textSize="@dimen/number_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            android:textSize="@dimen/number_text_size" />

        <Button
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8"
            android:textSize="@dimen/number_text_size" />

        <Button
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            android:textSize="@dimen/number_text_size" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_margin="8dp"
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/_0" />

        <Button
            android:layout_margin="8dp"
            android:id="@+id/button11"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dot" />
    </LinearLayout>

    <Space
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>

